Added the image

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body, html {
 }
 
 .stars {
-  background: url('https://www.transparenttextures.com/patterns/dark-matter.png') 0 0;
+  background: url('C: \Users\Wave\Desktop\Data analysis\Stars.jpg') 0 0;
   height: 100%;
   width: 100%;
   position: fixed;
