--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,5 @@
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Arial, sans-serif;
-  overflow: hidden;
-}
-
 .stars {
-  background: url('Stars.jpg') 0 0;
+  background: url('path_to_stars_image.jpg') 0 0;
   height: 100%;
   width: 100%;
   position: fixed;
