--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body, html {
 }
 
 .stars {
-  background: url('Stars.jpg') 0 0;
+  background: url('stars.jpg') 0 0;
   height: 100%;
   width: 100%;
   position: fixed;
@@ -33,8 +33,9 @@ body, html {
 }
 
 .welcome-text {
-  font-family: 'Roboto Mono', monospace;
-  font-size: 2em;
+  font-family: 'Roboto Mono', monospace; /* Change the font family to Roboto Mono */
+  font-size: 1em; /* Change the font size to 8em */
+}
 
 h1 {
   font-size: 3em;
